Замінює файли з 7 ДЗ

--- a/sass/layouts/_clients.scss
+++ b/sass/layouts/_clients.scss
@@ -1,15 +1,20 @@
-.clients-title {
-    margin-bottom: 50px;
-}
-
 .clients-list {
     display: flex;
+    flex-wrap: wrap;
     gap: 30px;
 }
 
 .clients-item {
-    width: calc((100% - 150px) / 6);
+    width: calc((100% - 30px) / 2);
     height: 92px;
+
+    @media screen and (min-width: 768px) {
+        width: calc((100% - 60px) / 3);
+    }
+
+    @media screen and (min-width: 1200px) {
+        width: calc((100% - 150px) / 6);
+    }
 }
 
 .clients-link {
