--- a/css/main.css
+++ b/css/main.css
@@ -44,6 +44,7 @@ address {
 img {
   display: block;
   max-width: 100%;
+  width: 100%;
   height: auto;
 }
 
@@ -97,15 +98,36 @@ body {
 }
 
 .section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .container {
-  width: 1200px;
+  width: 100%;
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
+}
+@media screen and (min-width: 480px) {
+  .container {
+    max-width: 480px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    max-width: 1200px;
+  }
 }
 
 .header__container {
@@ -271,14 +293,23 @@ body {
 }
 
 .card-list__item {
-  width: calc((100% - 90px) / 4);
+  width: 100%;
 }
-.card-list__item:not(:last-child) {
-  margin-right: 30px;
+@media screen and (min-width: 768px) {
+  .card-list__item {
+    width: calc((100% - 30px) / 2);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .card-list__item {
+    width: calc((100% - 90px) / 4);
+  }
 }
 
 .card-list {
   display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
 }
 
 .card-list__wrap {
@@ -292,7 +323,13 @@ body {
 }
 
 .section.work {
-  padding-top: 0;
+  display: none;
+}
+@media screen and (min-width: 1200px) {
+  .section.work {
+    display: block;
+    padding-top: 0;
+  }
 }
 
 .pictures-list {
@@ -331,16 +368,25 @@ body {
 
 .people-list {
   display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
 }
 
 .people-list__item {
   background-color: var(--main-background-color);
-  width: calc((100% - 90px) / 4);
+  width: 100%;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
-.people-list__item:not(:last-child) {
-  margin-right: 30px;
+@media screen and (min-width: 768px) {
+  .people-list__item {
+    width: calc((100% - 30px) / 2);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .people-list__item {
+    width: calc((100% - 90px) / 4);
+  }
 }
 
 .people-list__wrap {
@@ -399,18 +445,25 @@ body {
   color: var(--footer-icons-color);
 }
 
-.clients-title {
-  margin-bottom: 50px;
-}
-
 .clients-list {
   display: flex;
+  flex-wrap: wrap;
   gap: 30px;
 }
 
 .clients-item {
-  width: calc((100% - 150px) / 6);
+  width: calc((100% - 30px) / 2);
   height: 92px;
+}
+@media screen and (min-width: 768px) {
+  .clients-item {
+    width: calc((100% - 60px) / 3);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .clients-item {
+    width: calc((100% - 150px) / 6);
+  }
 }
 
 .clients-link {
@@ -440,7 +493,8 @@ body {
 
 .footer__container {
   display: flex;
-  align-items: baseline;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .address-items:not(:last-child) {
@@ -449,6 +503,7 @@ body {
 
 .address-item.link {
   line-height: 1.71;
+  text-align: center;
   color: var(--white-text-color);
 }
 .address-item.link:hover, .address-item.link:focus {
@@ -461,6 +516,7 @@ body {
 
 .footer-contacts-item.link {
   line-height: 1.71;
+  text-align: center;
   color: var(--footer-contacts-text-color);
 }
 .footer-contacts-item.link:hover, .footer-contacts-item.link:focus {
@@ -470,7 +526,8 @@ body {
 .footer-social-text {
   font-weight: 700;
   font-size: 14px;
-  line-height: 1, 14px;
+  line-height: 1.14;
+  text-align: center;
   text-transform: uppercase;
   color: var(--white-text-color);
   margin-bottom: 20px;
@@ -486,6 +543,7 @@ body {
 
 .sign-text {
   display: block;
+  text-align: center;
   font-weight: 700;
   line-height: 1.14;
   text-transform: uppercase;
@@ -556,15 +614,29 @@ body {
 
 .sign-form {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .buttons-list {
   display: flex;
-  justify-content: center;
-  margin-bottom: 50px;
+  flex-wrap: wrap;
+  margin-bottom: 40px;
+}
+@media screen and (min-width: 768px) {
+  .buttons-list {
+    justify-content: center;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .buttons-list {
+    justify-content: center;
+    margin-bottom: 50px;
+  }
 }
 
 .btn-item:not(:last-child) {
+  margin-bottom: 15px;
   margin-right: 8px;
 }
 
@@ -613,7 +685,17 @@ body {
 }
 
 .project-item {
-  flex-basis: calc((100% - 60px) / 3);
+  width: 100%;
+}
+@media screen and (min-width: 768px) {
+  .project-item {
+    width: calc((100% - 30px) / 2);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .project-item {
+    width: calc((100% - 60px) / 3);
+  }
 }
 
 .card-link {
