--- a/sass/layouts/_work.scss
+++ b/sass/layouts/_work.scss
@@ -1,5 +1,9 @@
 .section.work {
-    padding-top: 0;
+    display: none;
+    @media screen and (min-width: 1200px){
+        display: block;
+        padding-top: 0;
+    }
 }
 
 .pictures-list {
