--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,6 @@
 @import './utils/vars';
 @import './base/reset';
+@import './utils/mixins.scss';
 @import './components/logo';
 @import './base/common';
 @import './components/container';
