--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -13,4 +13,5 @@
     --line-header-color: #ececec;
     --icons-color: #afb1b8;
     --footer-icons-color: #ffffff;
+    --gradient: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4))
 }
