--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -1,3 +1,24 @@
+@mixin mobile {
+    @media screen and (min-width: 480px) {
+        @content;
+    }
+
+}
+
+@mixin tablet {
+    @media screen and (min-width: 768px) {
+        @content;
+    }
+
+}
+
+@mixin desctop {
+    @media screen and (min-width: 1200px) {
+        @content;
+    }
+
+}
+
 @mixin retina {
 
     @media (min-device-pixel-ratio: 2),
