--- a/css/main.css
+++ b/css/main.css
@@ -800,6 +800,7 @@ body {
   border-left: 1px solid var(--background-portfolio-projects-item);
   border-right: 1px solid var(--background-portfolio-projects-item);
   border-bottom: 1px solid var(--background-portfolio-projects-item);
+  flex-grow: 1;
 }
 
 .projects-list.list {
@@ -825,7 +826,9 @@ body {
 .card-link {
   color: currentColor;
   text-decoration: none;
-  display: block;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .card-link:hover, .card-link:focus {
