Адаптивна верстка Хедера (без меню моб)

--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -13,5 +13,6 @@ body {
     @media screen and (min-width: 1200px) {
         padding-top: 94px;
         padding-bottom: 94px;
+        max-width: 1600px;
     }
 }
