--- a/css/main.css
+++ b/css/main.css
@@ -65,17 +65,36 @@ img {
 }
 
 .navigation__logo {
-  margin-right: 93px;
-  padding-top: 24px;
-  padding-bottom: 25px;
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
+@media screen and (min-width: 768px) {
+  .navigation__logo {
+    padding-top: 16px;
+    padding-bottom: 16px;
+    margin-right: 88px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .navigation__logo {
+    padding-top: 24px;
+    padding-bottom: 25px;
+    margin-right: 93px;
+  }
 }
 
 .logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
+  font-size: 24px;
+  line-height: 1.17;
   color: var(--accent-color);
+}
+@media screen and (min-width: 1200px) {
+  .logo {
+    font-size: 26px;
+    line-height: 1.19;
+  }
 }
 
 .logo__part--dark-color {
@@ -106,6 +125,7 @@ body {
   .section {
     padding-top: 94px;
     padding-bottom: 94px;
+    max-width: 1600px;
   }
 }
 
@@ -134,6 +154,17 @@ body {
 .header__container {
   display: flex;
   align-items: center;
+  padding-left: 15px;
+  padding-right: 15px;
+  height: 80px;
+}
+@media screen and (min-width: 1200px) {
+  .header__container {
+    max-width: 1600px;
+    justify-content: center;
+    max-width: 1170px;
+    margin: 0 auto;
+  }
 }
 
 .header {
@@ -145,8 +176,13 @@ body {
 }
 
 .site-nav {
-  display: flex;
+  display: none;
   align-items: center;
+}
+@media screen and (min-width: 768px) {
+  .site-nav {
+    display: flex;
+  }
 }
 
 .site-nav__item:not(:last-child) {
@@ -173,24 +209,49 @@ body {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--main-text-color);
-  padding: 32px 0;
   display: flex;
   align-items: center;
   transition-property: color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+@media screen and (min-width: 1200px) {
+  .contacts__link {
+    padding: 32px 0;
+  }
+}
 .contacts__link:hover, .contacts__link:focus {
   color: var(--accent-color);
 }
 
 .header__contacts {
-  display: flex;
+  display: none;
   margin-left: auto;
 }
+@media screen and (min-width: 768px) {
+  .header__contacts {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header__contacts {
+    flex-direction: row;
+    margin-left: auto;
+  }
+}
 
-.contacts__item:not(:last-child) {
-  margin-right: 50px;
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .contacts__item:not(:last-child) {
+    margin-bottom: 10px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .contacts__item:not(:last-child) {
+    margin-right: 40px;
+  }
 }
 
 .contacts__icon {
@@ -878,8 +939,8 @@ body {
 
 .modal {
   position: absolute;
-  width: 528px;
-  height: 581px;
+  width: 450px;
+  height: 609px;
   background-color: var(--main-background-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -888,6 +949,12 @@ body {
   transform: translateX(-50%) translateY(-50%) scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 40px;
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    height: 581px;
+  }
 }
 
 .backdrop.is-hidden .modal {
@@ -1024,12 +1091,17 @@ body {
 
 .modal-label.agee {
   font-weight: 400;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   margin: 0;
   display: flex;
   align-items: center;
+}
+@media screen and (min-width: 1200px) {
+  .modal-label.agee {
+    font-size: 14px;
+  }
 }
 
 .agree-link {
