--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -3,17 +3,35 @@
 }
 
 .navigation__logo {
-    margin-right: 93px;
-    padding-top: 24px;
-    padding-bottom: 25px;
+    // margin-right: 93px;
+    // padding-top: 24px;
+    // padding-bottom: 25px;
+    padding-top: 16px;
+    padding-bottom: 16px;
+    @include tablet{
+        padding-top: 16px;
+        padding-bottom: 16px;
+        margin-right: 88px;
+    }
+    @include desktop{
+        padding-top: 24px;
+        padding-bottom: 25px;
+        margin-right: 93px;
+        // margin-left: 200px;
+    }
+
 }
 
 .logo {
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
+    font-size: 24px;
+    line-height: 1.17;
     color: var(--accent-color);
+    @include desktop{
+        font-size: 26px;
+        line-height: 1.19;
+    }
 }
 
 .logo__part--dark-color {
