--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -16,8 +16,10 @@
 
 .modal {
     position: absolute;
-    width: 528px;
-    height: 581px;
+    // width: 528px;
+    // height: 581px;
+    width: 450px;
+    height: 609px;
     background-color: var(--main-background-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
@@ -26,6 +28,11 @@
     transform: translateX(-50%) translateY(-50%) scale(1);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     padding: 40px;
+
+    @include desktop {
+        width: 528px;
+        height: 581px;
+    }
 }
 
 .backdrop.is-hidden .modal {
@@ -161,12 +168,17 @@
 
 .modal-label.agee {
     font-weight: 400;
-    font-size: 14px;
+    // font-size: 14px;
+    font-size: 12px;
     line-height: 1.71;
     letter-spacing: 0.03em;
     margin: 0;
     display: flex;
     align-items: center;
+
+    @include desktop {
+        font-size: 14px;
+    }
 }
 
 .agree-link {
