--- a/css/main.css
+++ b/css/main.css
@@ -156,7 +156,12 @@ body {
   align-items: center;
   padding-left: 15px;
   padding-right: 15px;
-  height: 80px;
+  height: 60px;
+}
+@media screen and (min-width: 768px) {
+  .header__container {
+    height: 80px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .header__container {
@@ -259,6 +264,120 @@ body {
   fill: currentColor;
 }
 
+.menu-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  overflow: auto;
+  padding: 48px 40px;
+  background-color: var(--main-background-color);
+  transform: translateX(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.menu-container.is-open {
+  transform: translateX(0);
+}
+
+.btn-menu-open,
+.btn-menu-close {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  background-color: transparent;
+  padding: 0;
+  fill: var(--secondary-text-color);
+  display: inline-flex;
+  align-items: center;
+}
+
+@media screen and (min-width: 768px) {
+  .btn-menu-open {
+    display: none;
+  }
+}
+
+.btn-menu-open__icon,
+.btn-menu-close__icon {
+  fill: currentColor;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.btn-menu-open__icon:hover, .btn-menu-open__icon:focus,
+.btn-menu-close__icon:hover,
+.btn-menu-close__icon:focus {
+  color: var(--accent-color);
+}
+
+.nav-menu__link {
+  display: inline-block;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  color: var(--secondary-text-color);
+}
+.nav-menu__link:hover, .nav-menu__link:focus {
+  color: var(--accent-color);
+}
+
+.nav-menu__item:not(:last-child),
+.menu-contacts__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.menu-contacts__item {
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
+}
+
+.menu-contacts__item:last-child {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.17;
+  color: var(--main-text-color);
+}
+
+.nav-menu {
+  margin-bottom: 60px;
+}
+
+.mob-socials {
+  display: flex;
+  margin-top: 64px;
+}
+
+.mob-socials__item {
+  display: flex;
+  align-items: center;
+}
+
+.mob-socials__item:not(:last-child)::after {
+  content: "";
+  display: inline-block;
+  width: 2px;
+  height: 22px;
+  background-color: rgba(33, 33, 33, 0.2);
+  margin: 0 10px;
+}
+
+.mob-socials__link {
+  display: inline-block;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
+}
+
 .current {
   color: var(--accent-color);
 }
@@ -293,7 +412,6 @@ body {
 }
 @media screen and (min-width: 768px) {
   .hero {
-    height: 459px;
     background-image: var(--gradient), url(../images/hero-bg-tab.jpg);
   }
 }
