Добавляє перенос соц.мереж

--- a/css/main.css
+++ b/css/main.css
@@ -352,12 +352,14 @@ body {
 
 .mob-socials {
   display: flex;
+  flex-wrap: wrap;
   margin-top: 64px;
 }
 
 .mob-socials__item {
   display: flex;
   align-items: center;
+  margin-bottom: 10px;
 }
 
 .mob-socials__item:not(:last-child)::after {
