--- a/css/main.css
+++ b/css/main.css
@@ -1059,7 +1059,7 @@ body {
 
 .modal {
   position: absolute;
-  width: 450px;
+  width: 100vw;
   height: 609px;
   background-color: var(--main-background-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -1069,6 +1069,11 @@ body {
   transform: translateX(-50%) translateY(-50%) scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 40px;
+}
+@media screen and (min-width: 480px) {
+  .modal {
+    width: 450px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .modal {
