--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -18,7 +18,7 @@
     position: absolute;
     // width: 528px;
     // height: 581px;
-    width: 450px;
+    width: 100vw;
     height: 609px;
     background-color: var(--main-background-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -28,6 +28,9 @@
     transform: translateX(-50%) translateY(-50%) scale(1);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     padding: 40px;
+    @media screen and  (min-width: 480px){
+        width: 450px ;  
+    }
 
     @include desktop {
         width: 528px;
