--- a/css/main.css
+++ b/css/main.css
@@ -125,7 +125,6 @@ body {
   .section {
     padding-top: 94px;
     padding-bottom: 94px;
-    max-width: 1600px;
   }
 }
 
@@ -496,11 +495,20 @@ body {
 .work__title,
 .people__title,
 .clients-title {
-  font-size: 36px;
-  line-height: 1.17;
+  font-size: 28px;
+  line-height: 1.18;
   text-align: center;
   color: var(--secondary-text-color);
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+}
+@media screen and (min-width: 1200px) {
+  .work__title,
+.people__title,
+.clients-title {
+    font-size: 36px;
+    line-height: 1.17;
+    margin-bottom: 50px;
+  }
 }
 
 .card-list__title {
@@ -509,6 +517,12 @@ body {
   text-transform: uppercase;
   color: var(--secondary-text-color);
   margin-bottom: 10px;
+  text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .card-list__title {
+    text-align: left;
+  }
 }
 
 .card-list__descr {
@@ -746,7 +760,7 @@ body {
   margin-bottom: 12px;
 }
 
-.address-list {
+.footer__address {
   margin-bottom: 60px;
 }
 
@@ -926,7 +940,7 @@ body {
 .buttons-list {
   display: flex;
   flex-wrap: wrap;
-  margin-bottom: 40px;
+  margin-bottom: 30px;
 }
 @media screen and (min-width: 768px) {
   .buttons-list {
@@ -954,7 +968,7 @@ body {
   letter-spacing: 0.03em;
   color: var(--secondary-text-color);
   background: #f5f4fa;
-  padding: 6px 22px;
+  padding: 6px 25px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button-item:hover, .button-item:focus {
@@ -1059,8 +1073,6 @@ body {
 
 .modal {
   position: absolute;
-  width: 100vw;
-  height: 609px;
   background-color: var(--main-background-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -1070,9 +1082,13 @@ body {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 40px;
 }
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 1199px) {
   .modal {
-    width: 450px;
+    width: 95%;
+    max-width: 450px;
+    height: 95%;
+    max-height: 609px;
+    overflow: scroll;
   }
 }
 @media screen and (min-width: 1200px) {
