--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -178,6 +178,10 @@
     }
 }
 
+.nav-menu__current {
+    color: var(--accent-color);
+}
+
 .nav-menu__item:not(:last-child),
 .menu-contacts__item:not(:last-child) {
     margin-bottom: 32px;
